# inference-proxy

./: .gitignore  .gitmessage  README.md  config.example.yaml  main.py  pyproject.toml
.cursor/rules/: coding.mdc  project.mdc  testing.mdc  vcs.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
docs/: config_format.md  guide.md  progress.md
docs/guide/: coding.md  testing.md  version.md
docs/project_plan/: design.md  flow.md  mvp.md  overview.md  project-prep.md  requirement.md
src/ai_proxy/: __init__.py  proxy.py
src/inference_proxy/: settings.py
tests/: test_example_test.py  test_proxy.py  test_settings.py
